Moved assets into public/

--- a/public/login.html
+++ b/public/login.html
@@ -11,7 +11,7 @@
 
   <!-- Logo -->
   <div class="mb-8">
-    <img src="../assets/FemAlert.jpeg" alt="FemAlert Logo" class="w-[412px] h-[258px] object-contain" />
+    <img src="assets/FemAlert.jpeg" alt="FemAlert Logo" class="w-[412px] h-[258px] object-contain" />
   </div>
 
   <!-- Login Form -->
