--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <!-- LOGO -->
   <div class="text-center py-6">
-    <img src="/assets/FemAlert.jpeg" alt="FemAlert Logo" class="mx-auto w-[412px] h-[258px] object-contain" />
+    <img src="assets/FemAlert.jpeg" alt="FemAlert Logo" class="mx-auto w-[412px] h-[258px] object-contain" />
   </div>
 
   <!-- NAVIGATION -->
